--- a/package.json
+++ b/package.json
@@ -25,16 +25,22 @@
     "@docsearch/react": "3",
     "@fontsource/inter": "^5.0.18",
     "@fontsource/lxgw-wenkai": "^5.0.2",
+    "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/rapier": "^1.4.0",
     "@sentry/astro": "^8.13.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.166.0",
     "astro": "^4.11.3",
     "astro-seo": "^0.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
+    "leva": "^0.9.35",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
+    "meshline": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reading-time": "^1.5.0",
@@ -43,6 +49,7 @@
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.166.1",
     "typescript": "^5.5.2"
   },
   "devDependencies": {
