--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@astrojs/vercel": "^7.7.2",
     "@docsearch/react": "3",
     "@fontsource/inter": "^5.0.18",
-    "@fontsource/lxgw-wenkai": "^5.0.2",
+    "@fontsource/lxgw-wenkai-tc": "^5.0.1",
     "@react-three/drei": "^9.108.3",
     "@react-three/fiber": "^8.16.8",
     "@react-three/rapier": "^1.4.0",
